# bevy-jam-7

./: Cargo.toml  README.md
assets/: Spider.glb
assets/enemies/: descent.enemy.ron
assets/navigation/: descent.nav.ron
benchmarks/: chunk_collider_benchmark.rs
src/: cave_noise.rs  cave_world.rs  chunk_colliders.rs  enemy_ai.rs  enemy_navigation.rs  greedy_mesher.rs  main.rs  mob_nav.rs  mob_nav_northstar.rs  mob_nav_vleue.rs  mob_navigation.rs  nav_sandbox.rs  player_controller.rs  spider_query_experiment.rs
src/mob_nav_northstar/: config.rs  debug.rs  grid.rs  mod.rs  planner.rs  sync.rs
